BILNA-23 #delete checkout on sticky bar and z-index fixing problem

--- a/skin/frontend/base/default/aw_featured/representations/grid/grid.css
+++ b/skin/frontend/base/default/aw_featured/representations/grid/grid.css
@@ -23,7 +23,7 @@
 }
 .awafpgrid ul li:hover {
 	background-color: #fff;
-	z-index: 10;
+	z-index: 2; /* change form "10" to "2" by dodo */
 	margin-left:0;
 	margin-right: 0;
 	border-color: transparent;
